[tool.poetry]
name = "dash-down"
version = "0.2.0rc1"
description = ""
authors = ["emher <emil.h.eriksen@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/emilhe/dash-down"
repository = "https://github.com/emilhe/dash-down"
documentation = "https://github.com/emilhe/dash-down"
keywords = ["dash", "plotly", "markdown", "flask"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
dash = ">=2.18.2"
dash-extensions = ">=1.0.19"
dash-mantine-components = "^0.15.1"
dash-iconify = "^0.1.2"
mistune = "2.0.4"
dataclass-wizard = "^0.30.1"

[tool.poetry.dev-dependencies]
coverage = "^7.6.8"
pytest = "^8.3.3"
dash = {extras = ["dev", "testing"], version = ">=2.18.2"}
pytest-cov = "^6.0.0"
pandas = ">=2.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
